--- a/src/components/mockupPage/mockupPage.css
+++ b/src/components/mockupPage/mockupPage.css
@@ -1,6 +1,22 @@
 .mockupPage {
   background-color: #f3f3f3;
-  width: 100vw;
+  width: 70vw;
   height: fit-content;
   min-height: 40vh; /* HARDKODA FOR NÅ, FJERN SENERE  */
+}
+
+.helloBlock {
+  display: flex;
+  flex-direction: row;
+}
+
+.helloItem {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+.helloP {
+  font-size: 12px;
 }
