--- a/src/components/mockupPage/mockupPage.css
+++ b/src/components/mockupPage/mockupPage.css
@@ -3,20 +3,28 @@
   width: 70vw;
   height: fit-content;
   min-height: 40vh; /* HARDKODA FOR NÅ, FJERN SENERE  */
+  padding-bottom: 2rem;
 }
 
-.helloBlock {
+.mockupRow {
   display: flex;
   flex-direction: row;
+  margin-top: 1rem;
+  flex-wrap: wrap;
 }
 
-.helloItem {
-  width: 50%;
+.rowItem-50 {
   display: flex;
   flex-direction: column;
-  padding: 1rem;
+  box-sizing: border-box;
+  width: 50%;
+  padding: 2rem;
 }
 
 .helloP {
-  font-size: 12px;
+  font-size: 1rem;
+}
+
+.textBox {
+  padding: 3rem;
 }
