--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -12,6 +12,7 @@ body {
   margin: var(--top-spacing) auto;
   padding: 0;
   font: 18px/1.4 system-ui;
+  margin-bottom: 0;
 }
 
 code {
@@ -28,6 +29,7 @@ code {
   display: flex;
   flex-direction: column;
   gap: 5rem;
+  flex: 1;
 }
 
 .contentGroup {
