--- a/src/components/mockupPage/mockupPage.css
+++ b/src/components/mockupPage/mockupPage.css
@@ -3,10 +3,11 @@
   width: 70vw;
   height: fit-content;
   min-height: 40vh; /* HARDKODA FOR NÅ, FJERN SENERE  */
-  margin-bottom: 2rem;
-  z-index: -1;
+  margin-bottom: 20rem;
 }
-
+.mockupNav {
+  z-index: -10; /*obs QUICKFIX */
+}
 .mockupRow {
   display: flex;
   flex-direction: row;
@@ -22,6 +23,13 @@
   padding: 2rem;
 }
 
+.mockupForm {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  border-radius: 4px;
+}
+
 .helloP {
   font-size: 1rem;
 }
@@ -32,4 +40,44 @@
 
 .heig {
   height: 300px;
+}
+
+input[type="checkbox"] {
+  position: relative;
+  cursor: pointer;
+  margin: 0.5rem;
+}
+input[type="checkbox"]:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 0;
+  left: 0;
+  background-color: #e9e9e9;
+}
+input[type="checkbox"]:checked:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 0;
+  left: 0;
+  background-color: #000000;
+}
+input[type="checkbox"]:checked:after {
+  content: "";
+  display: block;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  position: absolute;
+  top: 2px;
+  left: 6px;
 }
