--- a/src/components/contrastTable/contrastTable.css
+++ b/src/components/contrastTable/contrastTable.css
@@ -1,20 +1,20 @@
 .contrastTable {
     background-color: #f0f0f0;
-    padding: 16px;
+    padding: 1rem;
     border-radius: 4px;
     width: fit-content;
+    height: fit-content;
 }
 
 table, th, td {
     border: 4px solid white;
-    border-radius: 4px;
     border-collapse: collapse;
   }
 
   th, td {
-    padding: 10px;
+    padding: 6px;
     background-color: #f0f0f0;
-    min-width: 125px; 
+    min-width: 80px; 
     font-size: 14px;
   }
 
