--- a/src/components/contrastTable/contrastTable.css
+++ b/src/components/contrastTable/contrastTable.css
@@ -10,7 +10,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: left;
   align-items: center;
 }
 
@@ -19,7 +19,7 @@
   flex-direction: row;
   width: fit-content;
   align-items: center;
-  gap: 1rem
+  gap: 1rem;
 }
 
 table, th, td {
@@ -30,23 +30,26 @@ table, th, td {
   th, td {
     padding: 6px;
     background-color: #f0f0f0;
-    min-width: 80px; 
+    min-width: 85px; 
     font-size: 14px;
   }
 
   .colorBox{
     height: 20px;
     width: 20px;
-    margin-right: 5px;
-    display: inline;
+    float: left;
+  }
+
+  .tableText{
+    margin: 0px 4px 0px 4px;
     float: left;
   }
 
   .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 34px;
+    width: 46px;
+    height: 24px;
   }
   
   .switch input { 
@@ -62,7 +65,7 @@ table, th, td {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: #949494;
     -webkit-transition: .4s;
     transition: .4s;
   }
@@ -70,8 +73,8 @@ table, th, td {
   .slider:before {
     position: absolute;
     content: "";
-    height: 26px;
-    width: 26px;
+    height: 16px;
+    width: 16px;
     left: 4px;
     bottom: 4px;
     background-color: white;
@@ -88,14 +91,14 @@ table, th, td {
   }
   
   input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+    -webkit-transform: translateX(22px);
+    -ms-transform: translateX(22px);
+    transform: translateX(22px);
   }
   
   /* Rounded sliders */
   .slider.round {
-    border-radius: 34px;
+    border-radius: 24px;
   }
   
   .slider.round:before {
