--- a/src/components/mockupPage/mockupPage.css
+++ b/src/components/mockupPage/mockupPage.css
@@ -1,23 +1,32 @@
 .mockupPage {
   width: 45vw;
   height: fit-content;
-  min-height: 40vh; /* HARDKODA FOR NÅ, FJERN SENERE  */
-  margin-bottom: 20rem;
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 .mockupRow {
   display: flex;
+  gap: 1rem;
   flex-direction: row;
-  margin-top: 1rem;
   flex-wrap: wrap;
+  width: 100%;
+  height: fit-content;
+  margin-left: 1rem;
 }
 
-.rowItem-50 {
+.textBox {
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  width: 50%;
-  padding: 2rem;
+  width: 45%;
+  padding: 2rem 1rem 0rem 1rem;
+}
+
+.mockupIllustration {
+  width: 45%;
 }
 
 .mockupForm {
@@ -29,24 +38,11 @@
 }
 
 .piechart {
-  margin-top: 2rem;
   width: 10vw;
   height: 10vw;
   border-radius: 50%;
-  background-image: conic-gradient(
-    #ffffff 70deg, 
-    lightblue 0 235deg, 
-    orange 0);
 }
 
-.helloP {
+.mockupParagraph {
   font-size: 10px;
-}
-
-.textBox {
-  padding: 2rem 1rem 0rem 3rem;
-}
-
-.active {
-  border: 4px solid orange;
 }
