--- a/src/components/myColors/myColors.css
+++ b/src/components/myColors/myColors.css
@@ -1,18 +1,13 @@
 .myColors {
-  position: fixed;
-  top: 4rem;
-  left: 0;
-  width: 100vw;
-  background-color: #f1f1f1;
+  min-height: 100vh;
   height: fit-content;
-  display: grid;
-  grid-template-columns: 15% 85%;
-  grid-template-areas: "heading colors";
-  margin-bottom: 2rem;
+  background-color: #f1f1f1;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
-.headingAndButton {
-  grid-area: heading;
+.button {
   margin: 1rem;
   display: flex;
   flex-direction: column;
@@ -27,7 +22,6 @@
 }
 
 .inputFields {
-  grid-area: input;
   display: flex;
   flex-direction: row;
   margin: 1rem;
