--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,52 +1,23 @@
-html {
-  --top-spacing: 100px;
-  scroll-padding-top: var(--top-spacing);
-}
-
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  margin: var(--top-spacing) auto;
-  padding: 0;
-  font: 18px/1.4 system-ui;
-  margin-bottom: 0;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
 .App {
-  display: flex;
-  flex-direction: column;
-}
-
-.content {
-  margin-top: 6rem;
-  gap: 1rem;
-  flex: 1;
   display: grid;
-  grid-template-areas: "contentLeft space contentRight";
-  grid-template-columns: 25% 5% 70%;
+  overflow: hidden;
+  grid-template-areas: "colorbar content";
+  grid-template-columns: 15% 85%;
+  height: 100vh;
 }
 
-.contentLeft {
-  grid-area: contentLeft;
-  display: flex;
-  left: 2rem;
-  position: fixed;
+.colorBar {
+  grid-area: colorbar;
+  /*overflow: scroll;*/
 }
 
-.contentRight {
-  grid-area: contentRight;
+.rightSideBar {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
-  flex-wrap: wrap;
+  overflow-y: scroll;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
 }
 
 button {
