--- a/src/components/myColors/myColors.css
+++ b/src/components/myColors/myColors.css
@@ -5,13 +5,15 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .button {
   margin: 1rem;
   display: flex;
   flex-direction: column;
-  margin: 1rem;
+  margin: 1rem 1rem 5rem 1rem;
   align-items: center;
 }
 
@@ -27,4 +29,5 @@
   margin: 1rem;
   gap: 1rem;
   flex-wrap: wrap;
+  justify-content: center;
 }
