--- a/src/components/colorInput/colorInput.css
+++ b/src/components/colorInput/colorInput.css
@@ -1,3 +1,5 @@
+@import "../../variables.css";
+
 .colorInput {
   padding: 1fr;
   display: flex;
@@ -5,7 +7,7 @@
   padding: 2px 10px 2px 10px;
   margin-bottom: 5px;
   align-items: center;
-  background-color: #ffffff;
+  background-color: white;
   border-radius: 4px;
   min-width: 125px;
   width: fit-content;
@@ -36,12 +38,12 @@
   display: flex; /* or display:grid */
   align-items: center;
   justify-content: center;
-  color: black;
-  background: #ffffff;
+  color: var(--base-color-black);
+  background: white;
 }
 
 .deleteInput:hover {
   cursor: pointer;
-  color: #f0f0f0;
-  background-color: black;
+  color: var(--base-color-light-grey);
+  background-color: var(--base-color-dark-grey);
 }
