--- a/src/components/contrastSummary/contrastSummary.css
+++ b/src/components/contrastSummary/contrastSummary.css
@@ -1,6 +1,8 @@
+@import "../../variables.css";
+
 .contrastSummary {
     width: 14rem;
-    background-color: #f0f0f0;
+    background-color: var(--base-color-light-grey);
     padding: 1rem;
     height: fit-content;
 }
