--- a/src/components/contrastTable/contrastTable.css
+++ b/src/components/contrastTable/contrastTable.css
@@ -1,5 +1,7 @@
+@import "../../variables.css";
+
 .contrastTable {
-    background-color: #f0f0f0;
+    background-color: var(--base-color-light-grey);
     padding: 1rem;
     border-radius: 4px;
     width: fit-content;
@@ -29,7 +31,7 @@ table, th, td {
 
   th, td {
     padding: 6px;
-    background-color: #f0f0f0;
+    background-color: var(--base-color-light-grey);
     min-width: 85px; 
     font-size: 14px;
   }
@@ -65,7 +67,7 @@ table, th, td {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #949494;
+    background-color: var(--base-color-dark-grey);
     -webkit-transition: .4s;
     transition: .4s;
   }
@@ -83,11 +85,11 @@ table, th, td {
   }
   
   input:checked + .slider {
-    background-color: #1c4259;
+    background-color: var(--base-color-dark-pink);
   }
   
   input:focus + .slider {
-    box-shadow: 0 0 1px #1c4259;
+    box-shadow: 0 0 1px var(--base-color-dark-pink);
   }
   
   input:checked + .slider:before {
