--- a/src/variables.css
+++ b/src/variables.css
@@ -2,7 +2,7 @@
     --base-color-black: #1f1235;	
     --base-color-dark-grey: #3e3e3e;  
     --base-color-light-grey: #f3f3f3;
-
+    --base-color-light-beige: #f8f5f2;
     --base-color-pink: #ff8280;
     --base-color-dark-pink: #b44d4b;
 }
