--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -99,5 +99,5 @@ button:hover {
   display: flex;
   flex-direction: row;
   justify-content: left;
-  align-items: center;
+  align-items: baseline;
 }
