--- a/src/variables.css
+++ b/src/variables.css
@@ -1,6 +1,7 @@
 :root {
     --base-color-black: #1f1235;	
     --base-color-dark-grey: #3e3e3e;  
+    --base-color-mid-grey: #878787;
     --base-color-light-grey: #f3f3f3;
     --base-color-light-beige: #f8f5f2;
     --base-color-pink: #ff8280;
