--- a/src/components/contrastTable/contrastTable.css
+++ b/src/components/contrastTable/contrastTable.css
@@ -8,12 +8,15 @@
     height: fit-content;
 }
 
-.tableHeader{
+.tableHeader {
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: left;
   align-items: center;
+  gap: 2rem;
+  padding-bottom: 12px;
+  margin-left: 2px; /*fordi ytterse sirkel i radio button er 2px */
 }
 
 .toggle{
@@ -47,62 +50,31 @@ table, th, td {
     float: left;
   }
 
-  .switch {
-    position: relative;
-    display: inline-block;
-    width: 46px;
-    height: 24px;
+  label{
+    display: flex;
+    align-items: center;
+    gap: 0.3rem;
   }
-  
-  .switch input { 
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: var(--base-color-dark-grey);
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 16px;
-    width: 16px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: var(--base-color-dark-pink);
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px var(--base-color-dark-pink);
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(22px);
-    -ms-transform: translateX(22px);
-    transform: translateX(22px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 24px;
-  }
-  
-  .slider.round:before {
+
+  .radio-button {
+      /* Add if not using autoprefixer */
+    -webkit-appearance: none;
+    appearance: none;
+    /* For iOS < 15 to remove gradient background */
+    background-color: var(--base-color-light-grey);
+    /* Not removed via appearance */
+    margin: 0;
+    font: inherit;
+    width: 1.15rem;
+    height: 1.15rem;
+    border: 0.1rem solid var(--base-color-mid-grey)	;
     border-radius: 50%;
-  }
+}
+
+
+.radio-button:checked {
+  outline: max(1px, 0.1rem) solid var(--base-color-mid-grey);
+  background: var(--base-color-mid-grey);
+  border: 4px solid var(--base-color-light-grey);
+}
+
