--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -17,7 +17,6 @@
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
-  align-items: center;
   gap: 1rem;
   width: 100%;
 }
@@ -51,6 +50,11 @@
   flex-wrap: wrap;
   gap: 1rem;
   margin: 0;
+}
+
+.tableSection {
+  padding: 1rem;
+
 }
 
 button {
@@ -103,3 +107,4 @@ button:hover {
   justify-content: left;
   align-items: baseline;
 }
+
