--- a/src/components/mockupPage/mockupPage.css
+++ b/src/components/mockupPage/mockupPage.css
@@ -1,10 +1,12 @@
+@import "../../variables.css";
+
 .mockupPage {
   width: 45vw;
   height: fit-content;
-  margin-bottom: 2rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  border: 2px solid var(--base-color-mid-grey);
 }
 
 .mockupRow {
