white as a variable color

--- a/src/components/mockupPage/mockupPage.css
+++ b/src/components/mockupPage/mockupPage.css
@@ -6,7 +6,8 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  border: 2px solid var(--base-color-mid-grey);
+  border: 4px solid var(--base-color-mid-grey);
+  border-radius: 4px;
 }
 
 .mockupRow {
