--- a/src/variables.css
+++ b/src/variables.css
@@ -4,6 +4,7 @@
     --base-color-mid-grey: #878787;
     --base-color-light-grey: #f3f3f3;
     --base-color-light-beige: #f8f5f2;
+    --base-color-white: #fcfcfc;
     --base-color-pink: #ff8280;
     --base-color-dark-pink: #b44d4b;
 }
