--- a/src/components/colorInput/colorInput.css
+++ b/src/components/colorInput/colorInput.css
@@ -7,7 +7,7 @@
   padding: 2px 10px 2px 10px;
   margin-bottom: 5px;
   align-items: center;
-  background-color: white;
+  background-color: var(--base-color-white);
   border-radius: 4px;
   min-width: 125px;
   width: fit-content;
@@ -26,7 +26,7 @@
 #hex-input {
   width: 70px;
   background-color: transparent;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .deleteInput {
@@ -39,7 +39,7 @@
   align-items: center;
   justify-content: center;
   color: var(--base-color-black);
-  background: white;
+  background: var(--base-color-white);
 }
 
 .deleteInput:hover {
