--- a/src/components/contrastTable/contrastTable.css
+++ b/src/components/contrastTable/contrastTable.css
@@ -27,7 +27,7 @@
 
  table, td {
     /*border: 4px solid white;*/
-    border: 4px solid white;
+    border: 4px solid var(--base-color-white);
     border-collapse: collapse;
   }
 
