--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -6,6 +6,7 @@
   grid-template-areas: "colorbar content";
   grid-template-columns: 185px auto;
   height: 100vh;
+  background-color: var(--base-color-white);
 }
 
 .colorBar {
@@ -54,6 +55,7 @@
 
 .tableSection {
   padding: 1rem;
+  background-color: var(--base-color-white);
 }
 
 .mockupSection {
@@ -68,7 +70,7 @@ button {
   background-color: var(--base-color-dark-grey); /* Fargeøsnke? */
   border: none;
   border-radius: 4px;
-  color: white;
+  color: var(--base-color-white);
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
@@ -90,7 +92,7 @@ button:hover {
 
 .primaryButton:hover{
   background-color: var(--base-color-dark-pink);
-  color: white;
+  color: var(--base-color-white);
 }
 
 
