--- a/src/components/MockupIllustration/mockupIllustration.css
+++ b/src/components/MockupIllustration/mockupIllustration.css
@@ -4,10 +4,11 @@
     display: flex;
     flex-direction: row;
     width: fit-content;
+    min-width: 316px;
     height: fit-content;
     background-color: var(--base-color-white);
     border-radius: 4px;
-    /*border: 1px solid var(--base-color-dark-grey)*/
+    border: 1px solid var(--base-color-light-grey);
   }
 
   .mockup-color-bar {
