--- a/src/components/mockupGraph/mockupGraph.css
+++ b/src/components/mockupGraph/mockupGraph.css
@@ -3,6 +3,7 @@
 .mockup-graph {
     display: flex;
     flex-direction: row;
+    gap: .5rem;
     width: fit-content;
     align-items: center;
     min-width: 316px;
@@ -11,6 +12,12 @@
     border-radius: 4px;
     border: 1px solid var(--base-color-light-grey);
     padding-left: .4rem;
+    font-size: 12px;
   }
 
+  .piechart {
+    width: 10vw;
+    height: 10vw;
+    border-radius: 50%;
+  }
  
