--- a/src/components/mockupColorPicker/mockupColorPicker.css
+++ b/src/components/mockupColorPicker/mockupColorPicker.css
@@ -1,8 +1,38 @@
-.colorBlock{
-    width: 25px;
-    height: 25px;
+
+.mockup-color-bar-color {
+width: 3rem;
+height: 6rem;
+display: flex;
+justify-content: center;
+align-items: center;
+border-right: 1px solid var(--base-color-dark-grey);
+border-radius: 0;
+padding: 0;
+}
+
+.mockup-color-bar-color-top {
+border-top-left-radius: 4px;
+border-bottom: 1px solid var(--base-color-dark-grey);
+}
+
+.mockup-color-bar-color-bottom {
+border-bottom-left-radius: 4px;
 }
 
 .mockup-color-picker-list{
     border: 2px solid var(--base-color-white);
+    padding: 0;
+    margin: 0;
+}
+
+.color-picker-list-item-wrap{
+    padding: 0;
+    height: 25px;
+}
+
+.colorBlock{
+    width: 25px;
+    height: 25px;
+    padding: 0;
+    border-radius: 0;
 }
