--- a/src/components/contrastTable/contrastTable.css
+++ b/src/components/contrastTable/contrastTable.css
@@ -17,6 +17,7 @@
   gap: 2rem;
   padding-bottom: 12px;
   margin-left: 2px; /*fordi ytterse sirkel i radio button er 2px */
+  border: none;
 }
 
 .tableBody{
