--- a/src/components/colorInput/colorInput.css
+++ b/src/components/colorInput/colorInput.css
@@ -11,6 +11,7 @@
   border-radius: 4px;
   min-width: 125px;
   width: fit-content;
+  border: 2px solid var(--base-color-mid-grey);
 }
 
 .inputForColor {
