--- a/src/components/myColors/myColors.css
+++ b/src/components/myColors/myColors.css
@@ -12,6 +12,21 @@
   border-right: 2px groove var(--base-color-dark-grey);
 }
 
+
+.my-color-list {
+  display: flex;
+  flex-direction: row;
+  margin: 1rem;
+  gap: 1rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0;
+}
+
+.my-color-list-item {
+  padding: 0;
+}
+
 .button {
   margin: 1rem;
   display: flex;
@@ -26,11 +41,3 @@
   font-size: 12px;
 }
 
-.inputFields {
-  display: flex;
-  flex-direction: row;
-  margin: 1rem;
-  gap: 1rem;
-  flex-wrap: wrap;
-  justify-content: center;
-}
