toggle knapp med basic funksjonalitet

--- a/src/components/myColors/myColors.css
+++ b/src/components/myColors/myColors.css
@@ -1,6 +1,7 @@
 @import "../../variables.css";
 
-.myColors {
+.vertical-bar {
+  background-color: orange;
   min-height: 100vh;
   height: fit-content;
   background-color: var(--base-color-light-grey);
@@ -11,7 +12,19 @@
   align-items: center;
   border-right: 2px groove var(--base-color-dark-grey);
 }
-
+.horizontal-bar {
+  background-color: yellow;
+  min-width: 100vw;
+  height: fit-content;
+  background-color: var(--base-color-light-grey);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px groove var(--base-color-dark-grey);
+  z-index: 10;
+}
 
 .my-color-list {
   display: flex;
@@ -40,4 +53,3 @@
   padding: .7rem 0.7rem 0.7rem .7rem;
   font-size: 12px;
 }
-
