--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,10 +1,19 @@
 @import "../../variables.css";
 
-.App {
+.app-vertical-bar {
   display: grid;
   overflow: hidden;
   grid-template-areas: "colorbar content";
   grid-template-columns: 185px auto;
+  height: 100vh;
+  background-color: var(--base-color-white);
+}
+
+.app-horizontal-bar {
+  display: grid;
+  overflow: hidden;
+  grid-template-areas: "colorbar" "content";
+  grid-template-rows: 185px auto;
   height: 100vh;
   background-color: var(--base-color-white);
 }
