--- a/src/components/myColors/myColors.css
+++ b/src/components/myColors/myColors.css
@@ -4,32 +4,31 @@
   min-height: 100vh;
   height: fit-content;
   background-color: var(--base-color-light-grey);
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  overflow: hidden;
+  grid-template-areas: "togglebutton" "colorlist" "addbutton";
+  grid-template-rows: 15% 75% 10%;
+  align-items: start;
   border-right: 2px groove var(--base-color-dark-grey);
 }
+
 .horizontal-bar {
   min-width: 100vw;
-  height: fit-content;
+  height: 100px;
   background-color: var(--base-color-light-grey);
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-areas: "togglebutton colorlist addbutton";
+  grid-template-columns: 15% 70% 15%;
   justify-content: space-between;
   align-items: baseline;
   border-bottom: 2px groove var(--base-color-dark-grey);
 }
 
 .my-color-list {
-  display: flex;
-  flex-direction: row;
+  grid-area: colorlist;
   margin: 1rem;
   gap: 1rem;
   flex-wrap: wrap;
-  justify-content: center;
   padding: 0;
 }
 
@@ -38,11 +37,16 @@
 }
 
 .button {
-  margin: 1rem;
   display: flex;
   flex-direction: column;
-  margin: 1rem 1rem 5rem 1rem;
   align-items: center;
+  grid-area: addbutton;
+}
+
+.toggle-button {
+  grid-area: togglebutton;
+  width: 150px;
+  margin: 1rem; 
 }
 
 .addColorButton{
