--- a/src/components/myColors/myColors.css
+++ b/src/components/myColors/myColors.css
@@ -2,13 +2,10 @@
 
 .vertical-bar {
   height: 100vh;
-  width: fit-content;
   background-color: var(--base-color-light-grey);
   display: grid;
   grid-template-areas: "togglebutton" "colorlist" "addbutton";
-  grid-template-rows: 10% 75% 15%;
-  justify-content: start;
-  gap: 1rem;
+  grid-template-rows: 82px 1fr 82px;
   border-right: 2px groove var(--base-color-dark-grey);
 }
 
@@ -18,9 +15,7 @@
   background-color: var(--base-color-light-grey);
   display: grid;
   grid-template-areas: "togglebutton colorlist addbutton";
-  grid-template-columns: 15% 70% 15%;
-  justify-content: space-between;
-  align-items: baseline;
+  grid-template-columns: 82px 1fr 150px;
   border-bottom: 2px groove var(--base-color-dark-grey);
 }
 
@@ -28,7 +23,7 @@
   grid-area: colorlist;
   display: flex;
   flex-direction: column;
-  margin: 1rem;
+  margin: 0 1rem 0 1rem;
   gap: 1rem;
   padding: 0;
   overflow-y: scroll;
@@ -49,21 +44,24 @@
   padding: 0;
 }
 
-.button {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  grid-area: addbutton;
-}
-
 .toggle-button {
   grid-area: togglebutton;
-  width: fit;
+  width: 50px;
+  height: 50px;
   margin: 1rem; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
 }
 
 .addColorButton{
-  width: fit-content;
+  grid-area: addbutton;
   padding: .7rem 0.7rem 0.7rem .7rem;
   font-size: 12px;
+  height: 50px;
+  margin: 1rem; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
