--- a/src/components/colorPalette/colorPalette.css
+++ b/src/components/colorPalette/colorPalette.css
@@ -1,11 +1,13 @@
 @import "../../variables.css";
 
 .color-palette-container {
-    background-color: var(--base-color-white);
+    border: 2px solid var(--base-color-mid-grey);
     border-radius: 4px;
+    display: flex;
+    flex-direction: row;
 }
 
 .color-palette-color {
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    height: 35px;
 }
