--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -67,7 +67,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: baseline;
+  align-items: flex-end;
   gap: 4rem;
 }
 
