--- a/src/variables.css
+++ b/src/variables.css
@@ -1,3 +1,6 @@
+
+/*// SPDX-License-Identifier: GPL-3.0-or-later */
+
 :root {
     --base-color-black: #1f1235;	
     --base-color-dark-grey: #3e3e3e;  
